--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -35,7 +35,11 @@
                     </form>
             </mat-card>
             </div>
-
+            <div id="sidebar" (click)="next()">
+               <div class="thk">
+                  asd
+               </div>
+            </div>
             <div class="col-md-6">
                     <mat-card class="cards "style="line-height:30px;        ">
         
