--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -14,7 +14,32 @@
     text-align: center;
 }
 
-
+#sidebar .thk{
+    width:40%;
+    height: 30%;
+    margin-left: 30%;
+    margin-right: 30%;
+    margin-top: 10%;
+    background-color: white;
+    
+}
+#sidebar{
+ 
+    
+   
+    position: fixed;
+    left: -100%;
+    z-index: 7;
+    background-color: rgb(76, 71, 76);
+    opacity:0.8;
+    transition: all 300ms linear;
+}
+#sidebar.active{
+   left: 0px; 
+   top: 0;
+   bottom: 0;
+    right: 0;  
+}
 
 .cards{
 width:70%;
