--- a/src/app/work/androidapps/androidapps.component.html
+++ b/src/app/work/androidapps/androidapps.component.html
@@ -3,18 +3,23 @@
 </div>
 <div class="row">
   <div class="col-md-12">
-      <div class="col-md-4">  <br>
-        <mat-card class="heights" *ngIf="!showCard1">  
-            <img src="assets/img/geeta.jpg" class="img-responsive img-circle tm-border" alt="templatemo easy profile">
-                 <br>                                                                       
-                 <div class="adjust2">
-                <strong>Geeta</strong>
-                </div>
-                <div class="clearfix" style="text-align:center" (click)="showCard1=!showCard1"> 
-                <a  class="hvr-sweep-to-right more">See Details</a>
-                 </div>
-            </mat-card>
-            <mat-card *ngIf="showCard1" class="heights">        
+            <hr>
+      <div class="col-md-4"> 
+
+            <mat-card class="hq" *ngIf="!showCard1"> 
+                        <div>
+                        <img src="assets/img/geeta.jpg" class="img-responsive img-circle tm-border" alt="templatemo easy profile">
+                               
+                  </div>
+                                                                                     
+                          
+                            <div class="clearfix" style="text-align:center" (click)="showCard1=!showCard1"> 
+                                    <strong>Geeta</strong><br>
+                              <a  class="hvr-sweep-to-right more">See Details</a>
+                             </div>
+                   </mat-card>
+
+            <mat-card *ngIf="showCard1" class="hq">        
                    <div class="kahizala">   
                     <div class=" ser-grid"(click)="showCard1=!showCard1">	
                         <a class="hi-icon hi-icon-archive glyphicon glyphicon-remove"> </a>
@@ -30,8 +35,7 @@
                       <div class="adjust">
                             Bhagvat Geeta is whole communication that happens between
                              Bhagvan Shrikrishna and Arjun. 
-                            Bhagvan Shrikrishna was convensing Arjun 
-                            for war between Dharma(Good things) and Adharma(Bad things).
+                             This app contains whole 18 chapters of Bhagvat Geeta.
                       </div>
            
             </mat-card>
@@ -39,18 +43,20 @@
 
 
 
-      <div class="col-md-4">  <br>
-        <mat-card class="heights" *ngIf="!showCard">  
+      <div class="col-md-4">  
+        <mat-card class="hq" *ngIf="!showCard"> 
+              <div> 
             <img src="assets/img/solar.png" class="img-responsive img-circle tm-border" alt="templatemo easy profile">
-                 <br>                                                                       
-                 <div class="adjust2">
-                <strong>Solar System</strong>
-                </div>
+      </div>                                                                   
+               
+                
+          
                 <div class="clearfix" style="text-align:center" (click)="showCard=!showCard"> 
+                        <strong>Solar System</strong><br>
                 <a  class="hvr-sweep-to-right more">See Details</a>
                  </div>
             </mat-card>
-            <mat-card *ngIf="showCard" class="heights">    
+            <mat-card *ngIf="showCard" class="hq">    
                         <div class="kahizala"> 
                     <div class=" ser-grid"(click)="showCard=!showCard">	
                         <a class="hi-icon hi-icon-archive glyphicon glyphicon-remove"> </a>
@@ -75,18 +81,19 @@
 
 
 
-      <div class="col-md-4">  <br>
-        <mat-card class="heights" *ngIf="!showCard2">  
-            <img src="assets/img/raje.jpg" class="img-responsive img-circle tm-border" alt="templatemo easy profile">
-                 <br>                                                                       
-                 <div class="adjust2">
-                <strong>Chhatrapati Shivaji Maharaj</strong>
+      <div class="col-md-4"> 
+        <mat-card class="hq" *ngIf="!showCard2">  
+           
+                                                                                       
+                 <div >
+                        <img src="assets/img/raje.jpg" class="img-responsive img-circle tm-border" alt="templatemo easy profile">
                 </div>
                 <div class="clearfix" style="text-align:center" (click)="showCard2=!showCard2"> 
+                        <strong>Chhatrapati Shivaji Maharaj</strong> <br>
                 <a  class="hvr-sweep-to-right more">See Details</a>
                  </div>
             </mat-card>
-            <mat-card *ngIf="showCard2" class="heights"> 
+            <mat-card *ngIf="showCard2" class="hq"> 
                         <div class="kahizala"> 
                     <div class=" ser-grid"(click)="showCard2=!showCard2">	
                         <a class="hi-icon hi-icon-archive glyphicon glyphicon-remove"> </a>
@@ -100,11 +107,9 @@
                               </div>
                         </div> 
                       <div class="adjust">
-                            Chatrapati Shivaji Maharaj was the founder of the Maratha Empire in
-                             western India. He is considered to be one of the greatest warriors.
-                            
-                            This app contain Some Useful information about 
-                            Chhatrapati Shivaji Maharaj.
+                            Chatrapati Shivaji Maharaj was the founder of the Maratha Empire.
+                             He is one of the greatest warriors.
+                              This app contain Some Useful information about Chhatrapati Shivaji Maharaj.
                       </div>
                       <!-- <div class="cntrbtn">
                             <a  href="https://play.google.com/store/apps/details?id=com.Chatrapati.ShivajiMaharaj&hl=en" target="_blank" class="hvr-sweep-to-right more">  <img width="40px" class="pull-left" src="http://www.userlogos.org/files/logos/jumpordie/google_play_04.png">Playstore</a>
@@ -114,17 +119,19 @@
 
 
       <div class="col-md-4">  <br>
-        <mat-card class="heights" *ngIf="!showCard3">  
-            <img src="assets/img/ycicl.jpg" class="img-responsive img-circle tm-border" alt="templatemo easy profile">
-                 <br>                                                                       
-                 <div class="adjust2">
-                <strong>YCICL_Jobz</strong>
+        <mat-card class="hq" *ngIf="!showCard3">  
+                                                                                       
+                 <div >
+                        <img src="assets/img/ycicl.jpg" class="img-responsive img-circle tm-border" alt="templatemo easy profile">
+                        
                 </div>
                 <div class="clearfix" style="text-align:center" (click)="showCard3=!showCard3"> 
+                        <strong>YCICL_Jobz</strong> <br>
+                        
                 <a  class="hvr-sweep-to-right more">See Details</a>
                  </div>
             </mat-card>
-            <mat-card *ngIf="showCard3" class="heights">       
+            <mat-card *ngIf="showCard3" class="hq">       
                     <div class="kahizala">                                             
                     <div class=" ser-grid"(click)="showCard3=!showCard3">	
                         <a class="hi-icon hi-icon-archive glyphicon glyphicon-remove"> </a>
@@ -141,24 +148,25 @@
                                
                       <div class="adjust">
                             Youth Career Information Center & Lib is always conscious about students
-                             and their career.Always takes the initiative for rural area students to
-                              organize motivational programs and Career guideline programs.               
+                             and their career.It will help students to build their career.               
                       </div>
             </mat-card>
       </div>
 
       <div class="col-md-4">  <br>
-        <mat-card class="heights" *ngIf="!showCard4">  
-            <img src="assets/img/arti.jpg" class="img-responsive img-circle tm-border" alt="templatemo easy profile">
-                 <br>                                                                       
-                 <div class="adjust2">
-                <strong>Aarti Vishwa</strong>
+        <mat-card class="hq" *ngIf="!showCard4">  
+                                                                                      
+                 <div>
+                        <img src="assets/img/arti.jpg" class="img-responsive img-circle tm-border" alt="templatemo easy profile">
+                        
                 </div>
                 <div class="clearfix" style="text-align:center" (click)="showCard4=!showCard4"> 
+                        <strong>Aarti Vishwa</strong> <br> 
+                        
                 <a  class="hvr-sweep-to-right more">See Details</a>
                  </div>
             </mat-card>
-            <mat-card *ngIf="showCard4" class="heights">  
+            <mat-card *ngIf="showCard4" class="hq">  
                   <div class="kahizala">         
                     <div class=" ser-grid"(click)="showCard4=!showCard4">	
                         <a class="hi-icon hi-icon-archive glyphicon glyphicon-remove"> </a>
@@ -184,18 +192,20 @@
  
 
       <div class="col-md-4">  <br>
-        <mat-card class="heights" *ngIf="!showCard5">  
-            <img src="assets/img/svcet.jpg" class="img-responsive img-circle tm-border" alt="templatemo easy profile">
-                 <br>                                                                       
-                 <div class="adjust2">
-                <strong>SVCET</strong>
+        <mat-card class="hq" *ngIf="!showCard5">  
+                                                                                       
+                 <div>
+                        <img src="assets/img/svcet.jpg" class="img-responsive img-circle tm-border" alt="templatemo easy profile">
+                        
                 </div>
                 <div class="clearfix" style="text-align:center" (click)="showCard5=!showCard5"> 
+                        <strong>SVCET</strong><br> 
+                        
                 <a  class="hvr-sweep-to-right more">See Details</a>
                  </div>
             </mat-card>
 
-       <mat-card *ngIf="showCard5" class="heights">  
+       <mat-card *ngIf="showCard5" class="hq">  
              
             <div class="kahizala" >
                     <div class=" ser-grid"(click)="showCard5=!showCard5">	
