--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -4,8 +4,9 @@
     background: rgb(231, 4, 80) !important;
     padding-top: 1rem;
     padding-bottom: 1rem;
-     
+
 }
+
 .bluebox h1{
    margin-top:25px;
    margin-bottom: 25px;
@@ -13,47 +14,16 @@
     color:white;
     text-align: center;
 }
-
-#sidebar .thk{
-    width:40%;
-    height: 30%;
-    margin-left: 30%;
-    margin-right: 30%;
-    margin-top: 10%;
-    background-color: white;
-    
-}
-#sidebar{
- 
-    
-   
-    position: fixed;
-    left: -100%;
-    z-index: 7;
-    background-color: rgb(76, 71, 76);
-    opacity:0.8;
-    transition: all 300ms linear;
-}
-#sidebar.active{
-   left: 0px; 
-   top: 0;
-   bottom: 0;
-    right: 0;  
-}
-
 .cards{
 width:70%;
-margin-left: 10%;
-margin-right: 10%;
+margin-left: 15%;
+margin-right: 15%;
 margin-top:10%;
 margin-bottom:20%;
 
 }
 .cards{
-
-
     color:#ee7600;
-    
     text-align: center;
 }
 .cards h3{
@@ -63,4 +33,39 @@ margin-bottom:20%;
 }
 .cards button{
     color: rgb(20, 173, 90);
+}
+.fixer mat-card{
+    margin-left: 35%;
+    margin-top: 20%;
+    width: 30%;
+    text-align: justify;
+}
+.fixer{
+    position: fixed;
+    overflow: hidden;
+    background-color:rgba(0, 0, 255, 0.377);
+    z-index: 9999;
+   left: 0px; 
+   top: 0;
+   bottom: 0;
+    right: 0; 
+}
+
+
+@media only screen and (max-width: 768px) {
+    .fixer mat-card{
+        margin-left: 15%;
+        margin-top: 20%;
+        width: 70%;
+        text-align: justify;
+        
+    }
+    .cards{
+        width:80%;
+        margin-left: 10%;
+        margin-right: 10%;
+        margin-top:10%;
+        margin-bottom:20%;
+        
+        }
 }
