--- a/src/app/services/services.component.css
+++ b/src/app/services/services.component.css
@@ -1,17 +1,16 @@
-/* .bluebox {
-    width: 100%;
-    height: 130px;
-    background: rgb(245, 76, 9) !important;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
+
+.Images{
+    width: 30%;
+    height:30%;
+    margin-top: 20%;
+    border-color: 2px solid red;
+    
 }
-.bluebox h1{
-   margin-top:25px;
-   margin-bottom: 25px;
-   margin-left:25px;
-    color:white;
-    text-align: center;
-} */
+.mainDiv{
+/* width:  */
+}
+
+
 .alert{
     margin-left: 20px;
 }
@@ -26,28 +25,28 @@
     margin-bottom:10px;
     font-weight: bold;
 }
-
 .fntclr p{
     line-height: 2.428571;
     font-size: 18px;
     text-align: justify;
 }
 .fntclr{
-    /* margin-top:6%; */
+
     margin-bottom:10%;
 }
 .img-circle{
-    margin-top: 145px;
+   width: 100%;
+   height:100%;
+
 }
 
 .alert{
     width: 300px;
-    text-align: center;
+    margin-left:0px;
 }
 nxt{
    border: 1px solid re
 }
-
 .arrow-up {
     width: 0; 
     height: 0; 
@@ -56,28 +55,6 @@ nxt{
     
     border-bottom: 50px solid transparent;
   }
-
-  /* .bluebox{
-    background-image: url("/../../assets/img/redine.jpg");
-   width: 100%;
-   height:500px;
-   
- 
-}
-
-.bluebox h2{
-    text-align: center;
-    color: white;
-    font-style: italic;
-    font-weight: bold;
-}
-.bluebox h1{
-    text-align: center;
-    color: white;
-    font-style: italic;
-    font-size: 100px;
-} */
-
 .bluebox {
     width: 100%;
     height: 130px;
