--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -1,116 +1,121 @@
 <div class="bluebox">
-        <h1>What We Offer</h1>
-    </div>
-
-
-<!-- <div class="project">
- <div class="container"> -->
-    <div class="services">
-     <div class="col-md-12" style="background-color:white;">
-        <div class="col-md-4  ">
-            <img src="assets/images/webdesign.jpg" class="img-responsive img-circle tm-border" alt="templatemo easy profile">
-         </div>
-        <div class="col-md-6 fntclr"  >                     
-               <h2>Web Application Development</h2>
-                
-                        <div class="alert alert-success hvr-sweep-to-right aar " (click)="show = !show" >
-                             Technologies 
-                        </div>
-                 <p *ngIf="show"><button type="button" class="btn btn-primary btn-sm">Angular 2  /4</button>
-                    <button type="button" class="btn btn-primary btn-sm">Bootstrap 4</button>
-                    <button type="button" class="btn btn-primary btn-sm">HTML 5</button>  
-                    <button type="button" class="btn btn-primary btn-sm">CSS 3</button>
-                    <button type="button" class="btn btn-primary btn-sm">AngularJS</button>                    
-                    <button type="button" class="btn btn-primary btn-sm">jQuery</button>
-                    <button type="button" class="btn btn-primary btn-sm">php</button>
-                    <button type="button" class="btn btn-primary btn-sm">Nodejs</button>
-                    <button type="button" class="btn btn-primary btn-sm">MySQL</button>
-                    <button type="button" class="btn btn-primary btn-sm">MongoDB</button>                 
-                </p>
-                <p>
-                    We are specialized in developing creative & innovative web applications.
-                      We offer web development services for different domains such as
-                      Finanace,Real estate, Engineering, Social networking, E commerce,
-                        Healthcare etc. 
-                </p>
-                  <div class="alert alert-success b">
-                    Web Development
-                    </div>
-                    <div class="alert alert-danger"  >
-                      E-Commerce Development
-                    </div>
-            
-                    <div class="alert alert-success"  >
-                        Responsive design
-                    </div>
-                    <div class="alert alert-danger" >
-                        Dynamic Website
-                    </div>                        
-          </div>
-      </div>
-  </div>
-
-   <div class="container">
-  <div class="services">
-      <div class="col-md-12" style="background-color:rgb(255, 255, 255);">
-       
-          <div class="col-md-8 fntclr"  >                     
-                 <h2>Mobile Application Development</h2>
-
-                 <div class="alert alert-success hvr-sweep-to-right" (click)="show1 = !show1">
-                        Technologies 
-                   </div>
-            <p *ngIf="show1"><button type="button" class="btn btn-primary btn-sm">Android</button>
-               <button type="button" class="btn btn-primary btn-sm">Ionic</button>
-               <button type="button" class="btn btn-primary btn-sm">iOS</button>  
-               <button type="button" class="btn btn-primary btn-sm">Kotlin</button>
-               <button type="button" class="btn btn-primary btn-sm">Java 8</button>               
-               <button type="button" class="btn btn-primary btn-sm">Windows</button>                    
-               <button type="button" class="btn btn-primary btn-sm">Native Script</button>    
-           </p> <br>
-
-            <p>We offer mobile development services for different domains such as Education,
-                Location-based Solutions, Entertainment, Commerce, Social Networking,
-                 Healthcare, Consumer Mobility etc.
+    <h1>What We Offer</h1>
+</div>
+<div class="container">
+<div class="row">
+    <div class="col-md-12">
+        <div class="col-md-3 Images">
+            <img src="assets/images/webdesign.jpg" class="img-responsive" alt="templatemo easy profile">  
+        </div>
+        <div class="col-md-8 float-right fntclr" style="margin-top:10%;">
+            <div>
+            <h2>Web Application Development</h2>
+        </div>
+            <div class="alert alert-success hvr-sweep-to-right aar " (click)="show = !show">
+                Technologies
+            </div>
+            <p *ngIf="show">
+                <button type="button" class="btn btn-primary btn-sm">Angular 2 /4</button>
+                <button type="button" class="btn btn-primary btn-sm">Bootstrap 4</button>
+                <button type="button" class="btn btn-primary btn-sm">HTML 5</button>
+                <button type="button" class="btn btn-primary btn-sm">CSS 3</button>
+                <button type="button" class="btn btn-primary btn-sm">AngularJS</button>
+                <button type="button" class="btn btn-primary btn-sm">jQuery</button>
+                <button type="button" class="btn btn-primary btn-sm">php</button>
+                <button type="button" class="btn btn-primary btn-sm">Nodejs</button>
+                <button type="button" class="btn btn-primary btn-sm">MySQL</button>
+                <button type="button" class="btn btn-primary btn-sm">MongoDB</button>
             </p>
-        
-                <div class="alert alert-success">
-                Android Development
-                </div>
-                <div class="alert alert-danger"  >
-                iOS Development
-                </div>
-                <div class="alert alert-success"  >
-                    Windows Development
-                </div>
-                <div class="alert alert-danger" >
-                    Hybrid / Ionic Application Development
-                </div>                        
+            <p>
+                We are specialized in developing creative & innovative web applications. We offer web development services for different
+                domains such as Finanace,Real estate, Engineering, Social networking, E commerce, Healthcare etc.
+            </p>
+            <div class="alert alert-success b">
+                Web Development
+            </div>
+            <div class="alert alert-danger">
+                E-Commerce Development
             </div>
 
-            <div class="col-md-4  ">
-                <img src="assets/images/android.jpg" class="img-responsive img-circle tm-border" alt="templatemo easy profile">
-              </div>
+            <div class="alert alert-success">
+                Responsive design
+            </div>
+            <div class="alert alert-danger">
+                Dynamic Website
+            </div>
         </div>
     </div>
 </div>
-  
+</div>
+
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-3 Images">
+                <img src="assets/images/android.jpg" class="img-responsive" alt="templatemo easy profile">
+            </div>
+            <div class="col-md-8 float-right fntclr" style="margin-top:10%;">
+                <div>
+                    <h2>Mobile Application Development</h2>
+                </div>
+                <div class="alert alert-success hvr-sweep-to-right aar " (click)="show = !show">
+                    Technologies
+                </div>
+                <p *ngIf="show">
+                    <button type="button" class="btn btn-primary btn-sm">Android</button>
+                    <button type="button" class="btn btn-primary btn-sm">Ionic</button>
+                    <button type="button" class="btn btn-primary btn-sm">iOS</button>
+                    <button type="button" class="btn btn-primary btn-sm">Kotlin</button>
+                    <button type="button" class="btn btn-primary btn-sm">Java 8</button>
+                    <button type="button" class="btn btn-primary btn-sm">Windows</button>
+                    <button type="button" class="btn btn-primary btn-sm">Native Script</button>
+                </p>
+                <p>We offer mobile development services for different domains such as Education, Location-based Solutions, Entertainment,
+                    Commerce, Social Networking, Healthcare, Consumer Mobility etc.
+                </p>
+                <div class="alert alert-success b">
+                    Android Development
+                </div>
+                <div class="alert alert-danger">
+                    iOS Development
+                </div>
     
-<!-- <div class="container"> -->
-  <!-- <div class="services">
+                <div class="alert alert-success">
+                    Windows Development
+                </div>
+                <div class="alert alert-danger">
+                    Hybrid / Ionic Application Development
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+
+
+
+
+                
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+   
+    <div class="services">
         <div class="row">
       <div class="col-md-12">
        
-        <div class="col-md-4  ">
-            <img src="assets/images/dtmkting.jpg" class="img-responsive img-circle tm-border" alt="templatemo easy profile">
+        <div class="col-md-3 Images" style="margin-top:0%">
+            <img src="assets/images/dtmkting.png" class="img-responsive">
           </div>
-          <div class="col-md-8 fntclr"  >                     
-                 <h2>Digital Marketing Services</h2>
-
-                 <div class="alert alert-success hvr-sweep-to-right" (click)="show2 = !show2">
-                        Technologies 
-                   </div>
-            <p *ngIf="show2" ><button type="button" class="btn btn-primary btn-sm">Google Analytics</button>
+        
+          <div class="col-md-8  float-right fntclr"  >    
+                <h2>Digital Marketing Services</h2>
+                
+                    <div class="alert alert-success hvr-sweep-to-right" (click)="show2 = !show2">
+                        Technologies
+                    </div>                 
+          <p *ngIf="show2" ><button type="button" class="btn btn-primary btn-sm">Google Analytics</button>
                <button type="button" class="btn btn-primary btn-sm">Keyword Planner</button>
                <button type="button" class="btn btn-primary btn-sm">Peek</button>                  
            </p>
@@ -133,8 +138,10 @@
                  </div>
             </div>
         </div>
-    </div> -->
+    </div>
+        </div>
+    </div>
     <!-- </div> -->
-<!-- </div>
+    <!-- </div>
   
 </div> -->
