--- a/src/app/work/androidapps/androidapps.component.css
+++ b/src/app/work/androidapps/androidapps.component.css
@@ -1,24 +1,23 @@
-.clearfix {
-    width: 100%;
-    text-align: justify;
-    margin-left:18px;
-    float: right;
-    }
+
  .adjust{
     width: 100%;
+    margin-top: 20px;
     text-align: justify;
- }  .adjust2{
-    width: 100%;
-    text-align: center;
-    float: left;
  } 
+ 
+ 
 
 
-    .img-circle{
+    /* .img-circle{
         width: 170px;
         height: 170px;  
          margin-left: 20%;
-    }
+    } */
+    /* .heights{
+        height:300px;
+        height:300px;
+    }    */
+
     
     .more{
         text-align: left;    
@@ -31,10 +30,7 @@
         margin-bottom: 20px; 
     }
 
-    .heights{
-        height:300px;
-    }   
-
+    
     .cntrbtn{
         margin-left: 25%; 
         
@@ -42,9 +38,39 @@
       .kahizala{
        /* display: none; */
        height: 35%;
-      }
+     }
       .ser-grid{
           width:30%;
           height: 30%;
           float: left;
-      }
+      } 
+     .clearfix {
+        position: absolute;
+        width: 100%;
+        bottom: 0;
+        right:0;
+          text-align:center;
+        float: right;
+        }
+.hq{
+    position: relative;
+    height: 250px;
+}
+
+     .hq img {
+        position: absolute;
+        margin: auto;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        margin-top:0px;
+
+
+    }
+@media only screen and (max-width: 768px) {
+/* .heights{
+        height:300px;
+        height:300px;
+    }  */
+}
