--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -50,7 +50,10 @@ margin-bottom:20%;
    bottom: 0;
     right: 0; 
 }
-
+.ajax-form span{
+    color:rgb(207, 50, 50);
+    font-size: 14px;
+}
 
 @media only screen and (max-width: 768px) {
     .fixer mat-card{
